--- a/css/normalize.css
+++ b/css/normalize.css
@@ -22,10 +22,10 @@ body, p {
   font-size: larger;
 }
 
-h1, h2, h3, h4 {
-  /* font-family: 'alfont-boldi'; */
-  /* text-decoration: underline; */
-}
+/* h1, h2, h3, h4 {
+  font-family: 'alfont-boldi';
+  text-decoration: underline;
+} */
 
 /* HTML5 display definitions
    ========================================================================== */
@@ -112,7 +112,7 @@ a:link {
 
 a:visited {
   color: #181a25;
-} 
+}
 
 /* Text-level semantics
    ========================================================================== */
@@ -229,8 +229,7 @@ figure {
  */
 
 hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
+  box-sizing: border-box;
   height: 0;
 }
 
@@ -312,6 +311,7 @@ html input[type="button"], /* 1 */
 input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button; /* 2 */
+  appearance: button;
   cursor: pointer; /* 3 */
 }
 
@@ -376,9 +376,8 @@ input[type="number"]::-webkit-outer-spin-button {
 
 input[type="search"] {
   -webkit-appearance: textfield; /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; /* 2 */
-  box-sizing: content-box;
+  appearance: textfield;
+  box-sizing: border-box;
 }
 
 /**
