--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -197,8 +197,9 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #333;
+  background-color: #333;
   border-color: #888;
+  color: #fff;
   outline: 0; }
 .button.button-primary,
 button.button-primary,
