--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,10 +53,9 @@
     .content-section h4 {
       font-size: 2.5rem;
       font-weight: 600;
+      color:#181a25;
       margin-bottom: 2rem;
-      background: linear-gradient(135deg, #181a25, #555356);
       -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
       background-clip: text;
       line-height: 1.2;
     }
@@ -156,15 +155,19 @@
       }
 
       .content-section h4 {
-        font-size: 1.75rem;
+        font-size: 2.25rem;
       }
 
       .content-section p {
-        font-size: 1.1rem;
+        font-size: 1.75rem;
       }
 
       .profile-image {
         width: 180px;
         height: 180px;
       }
+        .content-section em {
+      color: #888;
+      font-size: medium;
+    }
     }
